[package]
name = "minikv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.13.0"
tracing = "0.1" # 日志处理
dashmap = "4"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
] } # 异步网络库
tracing-subscriber = "0.3.18" # 日志处理
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"

[dev-dependencies]
anyhow = "1"          # 错误处理
async-prost = "0.4.0" # 支持把 protobuf 封装成 TCP frame
futures = "0.3"       # 提供 Stream trait

[build-dependencies]
prost-build = "0.7.0" # 编译 protobuf

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
